# snake

./: .gitignore  CMakeLists.txt
includes/: default.h
src/: cli.c  cli.h  main.c  snake.c  snake.h
